--- a/Sample/AspNetCore1/project.json
+++ b/Sample/AspNetCore1/project.json
@@ -18,7 +18,7 @@
   },
 
   "commands": {
-    "web": "Microsoft.AspNet.Server.Kestrel --serverUrls http://*:5000"
+    "web": "Microsoft.AspNet.Server.Kestrel --server.urls http://*:5000"
   },
 
   "frameworks": {
@@ -36,6 +36,6 @@
     "**.vspscc"
   ],
   "scripts": {
-    "prepublish": ["npm install", "gulp"]
+    "prepublish": [ "npm install", "gulp" ]
   }
 }
