Upgrade exercise description to ASP.NET Core 1.0 RC2

--- a/Sample/Dockerfile
+++ b/Sample/Dockerfile
@@ -1,10 +1,10 @@
-FROM microsoft/aspnet
+FROM microsoft/dotnet:latest
 
 COPY ./AspNetCore1 /src
 
-RUN cd /src && dnu restore
+RUN cd /src && dotnet restore
 
 EXPOSE 5000
 
 WORKDIR /src
-CMD ["dnx", "web"]
+CMD ["dotnet", "run"]
