Integration test without fakes

--- a/Sample/Books.Test/Books.Test.csproj
+++ b/Sample/Books.Test/Books.Test.csproj
@@ -145,6 +145,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="IntegrationTestWithoutFakes.cs" />
     <Compile Include="IntegrationTest.cs" />
     <Compile Include="DemoTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
